Fix dot alignment around the circle. Contain the player for large browser widths..

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,11 @@
+main {
+    width: 80%;
+    max-width: 480px;
+    margin: auto;
+
+}
 #player {
     position: relative;
-    width: 80%;
-    margin: auto;
     margin-bottom: 40px;
     margin-top: 30px;
 }
@@ -113,15 +117,16 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+    transform: scale(1.01);
 }
 
 .dot {
-    width: 10px;
-    height: 10px;
+    width: 20px;
+    height: 20px;
     position: absolute;
     background: rgb(234, 0, 255);
     border-radius: 50%;
     top: 50%;
     left: 50%;
-    transform: translate(-5px, -5px)
+    transform: translate(-50%, -50%);
 }
